<resources>
    <string name="app_name">Audio Visualizer</string>
    <string name="action_pick_audio">Выбрать аудио</string>
    <string name="action_pick_image">Выбрать картинку</string>
    <string name="action_export">Экспорт в MP4</string>
    <string name="action_add_effect">Добавить эффект</string>
    <string name="layer_collapsed_indicator">▸</string>
    <string name="layer_expanded_indicator">▾</string>
    <string name="effect_particles">Частицы</string>
    <string name="effect_fog">Туман</string>
    <string name="effect_glow">Свечение</string>
    <string name="effect_chromatic_aberration">Хроматическая аберрация</string>
    <string name="layers_title">Слои</string>
    <string name="no_layers">Нет слоёв. Добавьте слой, чтобы начать.</string>
    <string name="add_layer">Добавить слой</string>
    <string name="analyzing_audio">Анализ аудио</string>
    <string name="analysis_stage_decoding">Декодирование…</string>
    <string name="analysis_stage_analyzing">Анализ частот…</string>
    <string name="analysis_stage_done">Готово</string>
    <string name="analysis_complete">Аудио проанализировано</string>
    <string name="analysis_failed">Ошибка анализа: %1$s</string>
    <string name="export_needs_audio">Сначала выберите аудио</string>
    <string name="exporting">Экспорт в MP4…</string>
    <string name="export_complete">Готово: %1$s</string>
    <string name="export_failed">Ошибка экспорта: %1$s</string>

    <string name="trim_title">Обрезка аудио</string>
    <string name="trim_loading_waveform">Построение waveform…</string>
    <string name="trim_load_failed">Не удалось загрузить аудио: %1$s</string>
    <string name="trim_play">▶ Играть</string>
    <string name="trim_pause">⏸ Пауза</string>
    <string name="trim_selection_range">%1$s – %2$s</string>
    <string name="trim_apply">Обрезать/Применить</string>
    <string name="trim_cancel">Отмена</string>
    <string name="trim_processing">Обработка…</string>
    <string name="trim_failed">Не удалось обрезать: %1$s</string>

    <string name="timeline_play_pause">Играть/Пауза</string>

    <string name="layer_move_up">Переместить слой выше</string>
    <string name="layer_move_down">Переместить слой ниже</string>
</resources>
